--- a/schoolnotes/cvars/cvars.tex
+++ b/schoolnotes/cvars/cvars.tex
@@ -92,7 +92,7 @@ top=20mm,
 \begin{definition}[Polar representation]
 	The polar representation of a complex number \(z=x+iy\) is
 	\begin{equation*}
-		re^{i\theta}=r(\text{cos}\,\theta+i\text{sin}\,\theta).
+		re^{i\theta}=r(\cos \theta+i\sin \theta).
 	\end{equation*}
 	Here \(r=\abs{z}\). The \emph{argument} of \(z\) is a multivalued function of \(\theta\), with
 	\begin{equation*}
@@ -104,9 +104,9 @@ top=20mm,
 	The identies obtained by equating the imaginary and real parts of the expansions of \(e^{in\theta}\) and \((e^{in})^\theta\) are known as de Moivre's formulae, e.g.
 	\begin{IEEEeqnarray*}{l}
 		e^{2i\theta}=(e^{i\theta})^2\\
-		\text{cos}\,2\theta+i\text{sin}\,2\theta=\text{cos}^2\,\theta+2i\text{cos}\,\theta\text{sin}\,\theta-\text{sin}^2\,\theta\\
-		\text{cos}\,2\theta=\text{cos}^2\,\theta-\text{sin}^2\,\theta\\
-		\text{sin}\,2\theta=2\text{cos}\,\theta\text{sin}\,\theta
+		\cos 2\theta+i\sin 2\theta=\cos^2 \theta+2i\cos \theta\sin \theta-\sin^2 \theta\\
+		\cos 2\theta=\cos^2 \theta-\sin^2 \theta\\
+		\sin 2\theta=2\cos \theta\sin \theta
 	\end{IEEEeqnarray*}
 \end{definition}
 \begin{definition}[\(n\)th root]
@@ -123,9 +123,47 @@ top=20mm,
 \begin{proposition}
 	If \(z\in\mathbb{C}\) with \(z=x+iy\) then
 	\begin{equation*}
-		e^z=e^xe^{iy}=e^{x}(\text{cos}\,y+i\text{sin}\,y).
+		e^z=e^xe^{iy}=e^{x}(\cos y+i\sin y).
 	\end{equation*}
 \end{proposition}
-\begin{definition}
+\section{Analytic Functions}
+\subsection{Limits}
+\begin{definition}[Limits]
+	If the limit of \(f(z)\) as \(z\) approaches \(z_0\) is \(w_0\), this means that for all \(\epsilon\in\mathbb{R}^+\), there exists \(\delta\in\mathbb{R}^+\) such that
+	\begin{equation*}
+		0<\abs{z-z_0}<\delta\Rightarrow \abs{f(z)-w_0}<\epsilon.
+	\end{equation*}
+	This is written as \(\lim_{z\rightarrow z_0}f(z)=w_0\).
 \end{definition}
+\begin{lemma}
+	The limit of a function is unique.
+	\begin{IEEEproof}
+		Suppose \(f:\mathbb{C}\rightarrow\mathbb{C}\) a function and that \(\lim_{z\rightarrow z_0}f(z)=w_0\) and \(\lim_{z\rightarrow z_0}f(z)=w_1\) with \(w_0\neq w_1\). Because \(w_0\neq w_1\), \(\abs{w_0-w_1}=L>0\). If we take \(\epsilon=L/2\), there exists \(\delta>0\) such that \(\abs{z-z_0}<\delta\Rightarrow \abs{f(z)-w_0}<L/2\,\wedge\,\abs{f(z)-w_1}<L/2\). Because \((z-w_1)+(w_0-z)=w_0-w_1\), by the triangle inequality \(\abs{w_0-w_1}\leq\abs{f(z)-w_0}+\abs{f(z)-w_1}=L\), a contradiction.
+	\end{IEEEproof}
+\end{lemma}
+\begin{theorem}
+	Suppose \(f(z)=u(x,y)+iv(x,y),\;z=x+iy\), and that \(z_0=x_0+iy_0\) and \(w_0=u_0+iv_0\). Then \(\lim_{z\rightarrow z_0}f(z)=w_0\) iff
+	\begin{equation*}
+		\lim_{(x,y)\rightarrow (x_0,y_0)}u(x,y)=u_0\text{ and }
+		\lim_{(x,y)\rightarrow (x_0,y_0)}v(x,y)=v_0.
+	\end{equation*}
+	\begin{IEEEproof}
+		do dis sheit
+	\end{IEEEproof}
+\end{theorem}
+\begin{theorem}
+	Suppose that
+	\begin{equation*}
+		\lim_{z\rightarrow z_0}f(x)=w_0\text{ and }\lim_{z\rightarrow z_0}F(z)=W_0.
+	\end{equation*}
+	Then the following is true:
+	\begin{IEEEeqnarray*}{l}
+		\lim_{z\rightarrow z_0}[f(z)+F(z)]=w_0+W_0,\\
+		\lim_{z\rightarrow z_0}[f(z)F(z)]=w_0W_0,\\
+		\lim_{z\rightarrow z_0}\frac{f(z)}{F(z)}=\frac{w_0}{W_0},\quad W_0\neq 0.
+	\end{IEEEeqnarray*}
+	\begin{IEEEproof}
+		prove dis
+	\end{IEEEproof}
+\end{theorem}
 \end{document}
